== XV Random Quotes ==

= 2.6.0 =
New feature: Default category migration from legacy settings

= 2.5.0 =
Improvement: New reset quotes only button in overview page

= 2.4.0 =
Improvement: always use manual migration for all database sizes

= 2.3.0 =
Bugfix: Prevent duplicated migrations
New feature: Button to retrigger migration

= 2.2.0 =
Bugfix: migration progress text shows correct migrated count
Bugfix: quote content key in REST API response
Bugfix: after_all/before_all wrappers not used on every quote
Improvement: Overview page added back
Improvement: Better quote title/preview in admin list

= 2.1.0 =
Improvement: new overview page
Improvement: supported media in the quote content
Improvemnet: settings page UX improvements
Bugfix: Big installations migrate properly
Bugfix: loader text is properly used
Bugfix: refresh link works properly in widgets and shortcodes

= 2.0.6 =
Bugfix: widgets use random order by default
Bugfix: proper kses usage in widgets

= 2..0.5 =
Bugfix: migrate even if the extension is not deactivated/activated again

= 2.0.4 =
Bugfix: properly escape table names in migration queries

= 2.0.3 =
Bugfix: mysql table escaping
Improvement: removed dev composer dependencies

= 2.0.2 =
Bugfixes:
- Add vendor folder to bundled files
- Renamed Blocks folder

= 2.0.1 =
Bugfix: move quote-refresh javascript file to root folder

= 2.0.0 =
Major release - Complete modernization and refactor to WordPress Custom Post Types

**🎉 New Features:**
* **Gutenberg Block Editor Support:**
  - Random Quote Block - Display one or more random quotes with category filtering
  - Specific Quote Block - Display a specific quote by ID
  - List Quotes Block - Display paginated list of quotes with filtering and sorting
  - All blocks support native WordPress styling or custom HTML wrappers
  - Full i18n support with proper localization

* **WordPress Custom Post Type Integration:**
  - Quotes are now native WordPress posts (xv_quote post type)