@@ -1,7 +1,8 @@
 == XV Random Quotes ==
 
 = 2.6.0 =
-New feature: Default category migration from legacy settings
+Improvement: Default category migration from legacy settings
+Improvement: Decouple settings migration steps
 
 = 2.5.0 =
 Improvement: New reset quotes only button in overview page
